Update distributionManagement link

--- a/pom.xml
+++ b/pom.xml
@@ -94,8 +94,8 @@
     </build>
     <distributionManagement>
         <repository>
-            <id>battleplugins-repo</id>
-            <url>scp://server.battleplugins.com/var/www/server.battleplugins.com/htdocs/maven/repository</url>
+            <id>rainbowcraft-repo</id>
+            <url>scp://rainbowcraft.sytes.net/var/www/maven/repository</url>
         </repository>
     </distributionManagement>
 </project>
