--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>mc.alk.arena</groupId>
     <artifactId>ArenaSpleef</artifactId>
     <packaging>jar</packaging>
-    <version>1.6.0</version>
+    <version>1.6.1</version>
     <name>ArenaSpleef</name>
     <url>https://github.com/BattlePlugins/ArenaSpleef</url>
     <properties>
@@ -40,6 +40,12 @@
             <groupId>mc.alk</groupId>
             <artifactId>BattleArena</artifactId>
             <version>3.9.11.1</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.sk89q</groupId>
+            <artifactId>worldedit</artifactId>
+            <version>5.5.8</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
